# GraFlo

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Makefile  README.md  ibes_ing.sh  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: build-docs.yml  pre-commit.yml  pypi-publish.yml
cli/: fetch_db_state.py  ingest.py  manage_dbs.py  plot_schema.py
conf/: ibes.yaml  ticker.yaml  wos.yaml  wos_json.yaml
conf/json/: community.yaml  freshcaller.yaml  kg_v0.yaml  kg_v1.yaml  kg_v2.yaml  kg_v3.yaml  kg_v3b.yaml  lake_odds.yaml  odds_sports.yaml  openalex.yaml  supply.yaml  wos.yaml
conf/table/: ibes.yaml  review.yaml  ticker.yaml  wos.yaml
docker/: README.md
docker/arango/: .env  docker-compose.yml
docker/neo4j/: .env  docker-compose.yml
docker/tigergraph/: .env  docker-compose.yml
docs/: examples.md  gen_pages.py  index.md  tmp.md
docs/concepts/: index.md
docs/examples/: example-1.md  example-2.md  example-3.md  example-4.md  examples.md  index.md
docs/getting_started/: installation.md  quickstart.md
docs/reference/: caster.md  index.md  onto.md  schema.md
examples/: arango.creds.json
examples/1-ingest-csv/: departments.csv  example1.py  example_1.py  ingest.py  people.csv  schema.yaml
examples/1.ingest.csv/: companies.csv  ingest.py  people.csv  schema.yaml
examples/2-ingest-self-references/: example_2.py  ingest.py  openalex.works.json  schema.yaml
examples/3-ingest-csv-edge-weights/: example_3.py  ingest.py  schema.yaml
examples/4-ingest-neo4j/: example_4.py  ingest.py  schema.yaml  test.cypher
graflo/architecture/: vertex.py
graflo/db/: __init__.py  conn.py  manager.py
graph_cast/: README.md  __init__.py  caster.py  chunker.py  fpsmart.py  main.py  onto.py  top.py  utils.py  utils_json.py
graph_cast/arango/: util.py
graph_cast/architecture/: __init__.py  config.py  edge.py  filter.py  general.py  graph.py  json.py  mapper.py  onto.py  ptree.py  resource.py  schema.py  table.py  transform.py  uitl.py  universal.py  util.py  vertex.py
graph_cast/cli/: ingest.py  manage_dbs.py  plot_schema.py  xml2json.py
graph_cast/db/: __init__.py  abstract_config.py  connection.py  factory.py  manager.py  onto.py  util.py
graph_cast/filter/: onto.py
graph_cast/flow/: row.py
graph_cast/input/: __init__.py  csv.py  csv_abs.py  json.py  json_aux.py  json_flow.py  table.py  table_flow.py  util.py
graph_cast/json/: util.py
graph_cast/plot/: __init__.py  plotter.py
graph_cast/util/: __init__.py  chunker.py  db.py  io.py  merge.py  misc.py  onto.py  pjson.py  pkg.py  query.py  timer.py  tranform.py  transform.py
graph_cast/xml/: io.py
graphcast/: __init__.py  caster.py  onto.py
graphcast/architecture/: __init__.py  action_node.py  actor.py  actor_util.py  actors.py  edge.py  extra.py  mapper.py  onto.py  (+7 more)
run/: conv.sh  finance_ingest.sh  generate_examples_figs.sh  ingest_pipeline.py  ingest_wos_csv.py  ingest_wos_json.py  plot_schemas.py  plot_schemas_json.py  unzip.py
sh/: convert_pnd_to_png.sh  generate_examples_figs.sh
test/: conftest.py  test_caster.py  test_db_access.py  test_filter.py  test_filters.py  test_filters_python.py  test_localvertexcol.py  test_location_index.py  test_mapper.py  test_merge.py  test_parse_json.py  test_patterns.py  test_transform.py
(+211 files in other folders)
