[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pre-commit>=3.3.3,<4",
  "pylint>=3.0.3,<4",
  "pytest>=7.4.0,<8"
]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
dependencies = [
  "click>=8.1.7,<9",
  "ijson>=3.2.3,<4",
  "neo4j>=5.22.0,<6",
  "networkx~=3.3",
  "pandas>=2.0.3,<3",
  "python-arango>=8.1.2,<9",
  "suthing>=0.3.0,<0.4",
  "xmltodict>=0.14.2,<0.15"
]
description = "ETL to cast tabular and json data types into graphs (collections of vertices and edges)"
name = "graph_cast"
requires-python = "~=3.11"
version = "0.13.20"

[project.optional-dependencies]
graphviz = ["pygraphviz~=1.11"]

[project.scripts]
ingest = "graph_cast.cli.ingest:ingest"
manage_dbs = "graph_cast.cli.manage_dbs:manage_dbs"
plot_schema = "graph_cast.cli.plot_schema:plot_schema"
xml2json = "graph_cast.cli.plot_schema:xml2json"

[tool.hatch.build.targets.sdist]
include = ["graph_cast"]

[tool.hatch.build.targets.wheel]
include = ["graph_cast"]
