[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pre-commit>=3.3.3,<4",
  "pytest>=7.4.0,<8"
]
docs = [
  "mkdocs-material>=9.6.12",
  "mkdocs>=1.6.1",
  "mkdocstrings[python]>=0.29.1"
]

[project]
authors = [{email = "alexander@growgraph.dev", name = "Alexander Belikov"}]
dependencies = [
  "click>=8.1.7,<9",
  "ijson>=3.2.3,<4",
  "neo4j>=5.22.0,<6",
  "networkx~=3.3",
  "pandas>=2.0.3,<3",
  "python-arango>=8.1.2,<9",
  "suthing==0.4.1",
  "xmltodict>=0.14.2,<0.15"
]
description = "ETL to cast tabular and json data types into graphs (collections of vertices and edges)"
name = "graphcast"
requires-python = "~=3.11"
version = "0.13.19"

[project.optional-dependencies]
graphviz = ["pygraphviz~=1.11"]

[project.scripts]
ingest = "graphcast.cli.ingest:ingest"
manage_dbs = "graphcast.cli.manage_dbs:manage_dbs"
plot_schema = "graphcast.cli.plot_schema:plot_schema"
xml2json = "graphcast.cli.plot_schema:xml2json"

[tool.hatch.build.targets.sdist]
include = ["graphcast"]

[tool.hatch.build.targets.wheel]
include = ["graphcast"]
